--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,7 +1,7 @@
 .hero {
     text-align: center;
     padding: 120px 0;
-    background-image: url('https://exclusivelykoi.co.uk/themes/exclusively-koi/assets/img/index-hero-1.JPG');
+    background-image: url('src/assets/Section.png');
     background-size: cover;
     background-position: center;
   }
@@ -23,3 +23,9 @@
     border: none;
     cursor: pointer;
   }
+  .east-sea-dokdo-regular {
+    font-family: "East Sea Dokdo", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
